# skogskvitto

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  package.json  pyproject.toml  script.ps1  uifix.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/accounts/: adapters.py  admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/billing/: apps.py  models.py  services.py  views.py
apps/billing/migrations/: 0001_initial.py
apps/core/: admin.py  context_processors.py  decorators.py  email_service.py  middleware.py  models.py  views.py
apps/core/migrations/: 0001_initial.py  0002_user_is_pilot.py
apps/exports/: apps.py  services.py  views.py
apps/integrations/: cloudinary_client.py  openai_client.py
apps/properties/: admin.py  apps.py  models.py  selectors.py  services.py  signals.py
apps/properties/migrations/: 0001_initial.py
apps/receipts/: admin.py  api.py  apps.py  billing.py  exports.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/receipts/migrations/: 0001_initial.py  0002_receipt_ai_fields.py  0002_receipt_cloudinary_secure_url_and_more.py  0003_receipt_net_amount.py  (+9 more)
apps/scanning/: apps.py  forms.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
assets/css/: input.css
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: views.py
infra/: Dockerfile  docker-compose.yml
receipts/: api.py  exports.py  models.py  services.py  views.py
receipts/migrations/: 0002_receipt_ai_fields.py
scripts/: fix_current_failures.py  vendor-build.ts
static/css/: app.css
static/js/: app.js  cookie-banner.js  correction-suggestion.js  mobile-nav.js  receipt-upload.js
static/src/: input.css
templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  signup.html  verification_sent.html
templates/accounts/: delete_confirm.html  profile.html
templates/core/: base.html  dashboard.html  home.html  index.html
templates/email/: kvitto_mottaget.txt  tack_for_betalningen.txt  valkommen.txt
templates/emails/: kvitto_mottaget.txt  tack_for_betalningen.txt  valkommen.txt
templates/layouts/: app.html  base.html
templates/legal/: cookies.html  privacy_policy.html  terms_of_service.html
templates/marketing/: home.html
templates/partials/: cookie_banner.html  footer.html  header.html  messages.html  mobile_nav.html  pilot_badge.html  premium_badge.html  premium_cta.html
templates/receipts/: dashboard.html  receipt_detail.html  receipt_edit.html  receipt_edit_locked.html  receipts_list.html  scan.html  tax_year_detail.html  tax_year_list.html
templates/scanning/: scan.html
templates/socialaccount/: authentication_error.html
tests/: conftest.py  test_email_service.py  test_entitlements.py  test_profile_navigation.py  test_receipt_access.py  test_receipt_helpers.py
(+50 files in other folders)
