[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "skogskvitto"
version = "0.1.0"
description = "SkogsKvitto SaaS foundation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=6.0",
  "django-ninja>=1.3.0",
  "python-decouple>=3.8",
  "django-csp>=3.8",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.28.0",
  "openpyxl>=3.1.0",
  "pillow>=11.0.0",
  "python-magic>=0.4.27",
  "gunicorn>=23.0.0",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "django-stubs>=5.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "pip-audit>=2.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["decouple"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]
