[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "skogskvitto"
version = "0.1.0"
description = "SkogsKvitto SaaS foundation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=6.0",
  "python-decouple>=3.8",
  "django-csp>=3.8",
  "django-cloudinary-storage>=0.3.0",
  "dj-database-url>=3.1.2",
  "cloudinary>=1.44.2",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.28.0",
  "openpyxl>=3.1.0",
  "pillow>=11.0.0",
  "pydantic>=2.10.0",
  "python-magic>=0.4.27; sys_platform != 'win32'",
  "python-magic-bin>=0.4.14; sys_platform == 'win32'",
  "whitenoise>=6.8.0",
  "gunicorn>=23.0.0",
  "uvicorn>=0.34.0",
  "django-allauth>=65.16.1",
  "django-rq>=3.0.0",
  "redis>=5.2.0",
  "pyjwt>=2.12.1",
  "cryptography>=48.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "django-stubs>=5.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "pytest-django>=4.11.0",
  "pip-audit>=2.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["decouple"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["allauth", "allauth.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["django_rq", "django_rq.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
